[package]
name = "lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.12.0"
bytes = "1.0"
prost = "0.12.3"
glommio = "0.9.0"

# Only necessary if using Protobuf well-known types:
prost-types = "0.12.3"
fastrand = "2.0.1"
futures-lite = "2.2.0"

[build-dependencies]
prost-build = "0.12.3"